# Distributed-ML-Param-Serve

./: .bazelrc  .clangd  .gitignore  BUILD.bazel  MODULE.bazel  README.md  WORKSPACE
benchmarks/: BUILD.bazel  csr_compression_bench.cu  gpu_throughput_bench.cu  pinned_memory_bench.cu
proto/: BUILD.bazel  parameter_server.proto
src/core/: BUILD.bazel  parameter_store.cc  parameter_store.h  sparse_format.cc  sparse_format.h
src/cuda/: BUILD.bazel  gpu_parameter_store.cu  gpu_parameter_store.cuh  gpu_sparse_ops.cu  gpu_sparse_ops.cuh
src/server/: BUILD.bazel  parameter_server_impl.cc  parameter_server_impl.h  server_cuda_bridge.cu  server_cuda_bridge.h  server_main.cc
src/worker/: BUILD.bazel  worker_client.cc  worker_client.h  worker_cuda_ops.cu  worker_cuda_ops.cuh  worker_main.cc
tests/: BUILD.bazel  gpu_parameter_store_test.cu  gpu_sparse_ops_test.cu  parameter_store_test.cc  sparse_format_test.cc
