load("@com_google_protobuf//bazel:cc_proto_library.bzl", "cc_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")
load("@com_github_grpc_grpc//bazel:cc_grpc_library.bzl", "cc_grpc_library")

package(default_visibility = ["//visibility:public"])

proto_library(
    name = "parameter_server_proto",
    srcs = ["parameter_server.proto"],
)

cc_proto_library(
    name = "parameter_server_cc_proto",
    deps = [":parameter_server_proto"],
)

cc_grpc_library(
    name = "parameter_server_cc_grpc",
    srcs = [":parameter_server_proto"],
    grpc_only = True,
    deps = [":parameter_server_cc_proto"],
)
