load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library")
load("@rules_cuda//cuda:defs.bzl", "cuda_library")

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "worker_client",
    srcs = ["worker_client.cc"],
    hdrs = ["worker_client.h"],
    deps = [
        "//proto:parameter_server_cc_grpc",
        "//proto:parameter_server_cc_proto",
        "@com_github_grpc_grpc//:grpc++",
    ],
)

_CUDA_COPTS = [
    "--std=c++17",
    "-Xcompiler=/std:c++17",
]

# CUDA kernel code compiled by NVCC (no protobuf/gRPC headers).
cuda_library(
    name = "worker_cuda_ops",
    srcs = ["worker_cuda_ops.cu"],
    hdrs = ["worker_cuda_ops.cuh"],
    copts = _CUDA_COPTS,
)

# Worker binary: plain C++ that links CUDA libs but does not go through NVCC.
cc_binary(
    name = "worker",
    srcs = ["worker_main.cc"],
    deps = [
        ":worker_client",
        ":worker_cuda_ops",
        "//proto:parameter_server_cc_grpc",
        "//proto:parameter_server_cc_proto",
        "//src/cuda:gpu_sparse_ops",
        "@com_github_grpc_grpc//:grpc++",
    ],
)
